Trying to get the autoload to work.

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
   "name": "usbooking/staydates",
+  "require": {
+    "php": ">=5.3.3"
+  },
   "autoload": {
-    "psr-0" : {
-      "USBooking\\StayDates" : "src/"
+    "psr-0": {
+      "USBooking\\StayDates\\": "src/"
     }
   }
 }
